apply plugin: 'java'
apply plugin: 'maven'

group 'com.github.unknowndomaingame'
version '1.0.0'

sourceCompatibility = targetCompatibility = 11

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

repositories {
    jcenter()
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    compile 'com.google.guava:guava:27.1-jre'
    compile 'org.apache.commons:commons-lang3:3.8.1'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
}
